update project name and associated files

--- a/src/class-productionalizing-notebooks.ipynb
+++ b/src/class-productionalizing-notebooks.ipynb
@@ -52,7 +52,7 @@
     "- [Testing][unittest]\n",
     "- [Git Workflow][git-workflow]\n",
     "- [ML Productionalization Workflow][ml-productionalization-workflow]\n",
-    "- [Productionalization Project][macys-project]\n",
+    "- [Productionalization Project][our-project]\n",
     "\n",
     "\n",
     "[virtualenv]: ./virtualenv.ipynb\n",
