update project title

--- a/src/class-productionalizing-notebooks.ipynb
+++ b/src/class-productionalizing-notebooks.ipynb
@@ -61,7 +61,7 @@
     "[unittest]: ./unittest.ipynb\n",
     "[git-workflow]: ./git-workflow.ipynb\n",
     "[ml-productionalization-workflow]: ./ml-productionalization-workflow.ipynb\n",
-    "[macys-project]: ./macys-project.ipynb"
+    "[our-project]: ./our-project.ipynb"
    ]
   },
   {
